--- a/index.html
+++ b/index.html
@@ -11,31 +11,167 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Primary Meta Tags -->
-    <title>Sizakala Business Services - Professional Accounting for Public Schools</title>
-    <meta name="title" content="Sizakala Business Services - Professional Accounting for Public Schools" />
-    <meta name="description" content="Expert audit and bookkeeping services for South African public schools. Registered with CIBA. Affordable pricing from R150/month. Serving Durban and beyond." />
-    <meta name="keywords" content="school accounting, school audit, bookkeeping services, Durban accountants, public school finance, CIBA registered, school financial management, South African schools" />
-    <meta name="author" content="Sizakala Business Services Provider" />
+    <title>Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance | Durban</title>
+    <meta name="title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance | Durban" />
+    <meta name="description" content="CBAP SA registered accountants specializing in public school audits (from R2,000), bookkeeping (R150/month), and funding assistance. Certified by CIBA & SAIT. Based in Durban, serving all SA schools." />
+    <meta name="keywords" content="school audit Durban, school bookkeeping, school funding assistance, Section 18A registration, CBAP accountant, CIBA registered, SAIT practitioner, public school accounting, NPO financial statements, school audit services South Africa, Durban accountants, KwaZulu-Natal school auditor" />
+    <meta name="author" content="Sizakala Business Services Provider (Pty) Ltd" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sizakalabsp.com/" />
-    <meta property="og:title" content="Sizakala Business Services - Professional Accounting for Public Schools" />
-    <meta property="og:description" content="Expert audit and bookkeeping services for South African public schools. Registered with CIBA. Affordable pricing from R150/month." />
+    <meta property="og:title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance" />
+    <meta property="og:description" content="CBAP SA registered accountants for public schools. Audit services from R2,000, bookkeeping from R150/month, plus funding assistance. CIBA & SAIT certified. Durban based." />
     <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:locale" content="en_ZA" />
+    <meta property="og:site_name" content="Sizakala Accountants" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://sizakalabsp.com/" />
-    <meta property="twitter:title" content="Sizakala Business Services - Professional Accounting for Public Schools" />
-    <meta property="twitter:description" content="Expert audit and bookkeeping services for South African public schools. Registered with CIBA. Affordable pricing from R150/month." />
+    <meta property="twitter:title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance" />
+    <meta property="twitter:description" content="CBAP SA registered accountants for public schools. Audit services from R2,000, bookkeeping from R150/month, plus funding assistance. CIBA & SAIT certified." />
     <meta property="twitter:image" content="/twitter-image.jpg" />
 
     <!-- Additional SEO -->
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
+    <meta name="geo.region" content="ZA-NL" />
+    <meta name="geo.placename" content="Durban" />
+    <meta name="geo.position" content="-29.86;31.02" />
     <link rel="canonical" href="https://sizakalabsp.com/" />
+
+    <!-- Structured Data - LocalBusiness Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AccountingService",
+      "name": "Sizakala Accountants",
+      "legalName": "Sizakala Business Services Provider (Pty) Ltd",
+      "url": "https://sizakalabsp.com",
+      "logo": "https://sizakalabsp.com/logo-company.png",
+      "image": "https://sizakalabsp.com/og-image.jpg",
+      "description": "Professional accounting services specializing in public school audits, bookkeeping, and funding assistance. CBAP SA registered with CIBA and SAIT certification.",
+      "telephone": "+27670343472",
+      "email": "sizakalabsp@gmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "526 Durban Club Place, 303 Anton Lembede Street",
+        "addressLocality": "Durban",
+        "addressRegion": "KwaZulu-Natal",
+        "postalCode": "4001",
+        "addressCountry": "ZA"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-29.86",
+        "longitude": "31.02"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "08:00",
+          "closes": "17:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "00:00",
+          "closes": "00:00",
+          "description": "By Appointment Only"
+        }
+      ],
+      "priceRange": "R150 - R7000",
+      "areaServed": {
+        "@type": "Country",
+        "name": "South Africa"
+      },
+      "serviceArea": {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": "-29.86",
+          "longitude": "31.02"
+        },
+        "geoRadius": "500000"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Accounting Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "School Audit Services",
+              "description": "Financial statement audits for public schools to ensure compliance with National Norms and Standards.",
+              "provider": {
+                "@type": "AccountingService",
+                "name": "Sizakala Accountants"
+              }
+            },
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "2000",
+              "priceCurrency": "ZAR",
+              "description": "Starting from R2,000"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "School Bookkeeping Services",
+              "description": "Monthly and quarterly bookkeeping services for public schools, NPOs, and companies.",
+              "provider": {
+                "@type": "AccountingService",
+                "name": "Sizakala Accountants"
+              }
+            },
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "150",
+              "priceCurrency": "ZAR",
+              "description": "Starting from R150/month"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Funding Assistance for Schools",
+              "description": "Section 18A registration and funding application services to help schools obtain funding from 30+ donor organizations.",
+              "provider": {
+                "@type": "AccountingService",
+                "name": "Sizakala Accountants"
+              }
+            },
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "950",
+              "priceCurrency": "ZAR",
+              "description": "R950 registration + 8% success fee"
+            }
+          }
+        ]
+      },
+      "sameAs": [
+        "https://wa.me/27670343472"
+      ],
+      "memberOf": [
+        {
+          "@type": "Organization",
+          "name": "Chartered Institute for Business Accountants (CIBA)"
+        },
+        {
+          "@type": "Organization",
+          "name": "South African Institute of Tax Practitioners (SAIT)"
+        }
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
