Update company branding across multiple files, changing references from 'Sizakala Business Services Provider' to 'Sizakala Accountants' and updating URLs to the new domain 'sizakalaaccountants.co.za'. Adjust footer, meta tags, and sitemap for consistency and improved SEO.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta name="title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance | Durban" />
     <meta name="description" content="CBAP SA registered accountants specializing in public school audits (from R2,000), bookkeeping (R150/month), and funding assistance. Certified by CIBA & SAIT. Based in Durban, serving all SA schools." />
     <meta name="keywords" content="school audit Durban, school bookkeeping, school funding assistance, Section 18A registration, CBAP accountant, CIBA registered, SAIT practitioner, public school accounting, NPO financial statements, school audit services South Africa, Durban accountants, KwaZulu-Natal school auditor" />
-    <meta name="author" content="Sizakala Business Services Provider (Pty) Ltd" />
+    <meta name="author" content="Sizakala Accountants (Pty) Ltd" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sizakalabsp.com/" />
+    <meta property="og:url" content="https://sizakalaaccountants.co.za/" />
     <meta property="og:title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance" />
     <meta property="og:description" content="CBAP SA registered accountants for public schools. Audit services from R2,000, bookkeeping from R150/month, plus funding assistance. CIBA & SAIT certified. Durban based." />
     <meta property="og:image" content="/og-image.jpg" />
@@ -28,7 +28,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://sizakalabsp.com/" />
+    <meta property="twitter:url" content="https://sizakalaaccountants.co.za/" />
     <meta property="twitter:title" content="Sizakala Accountants - School Audit, Bookkeeping & Funding Assistance" />
     <meta property="twitter:description" content="CBAP SA registered accountants for public schools. Audit services from R2,000, bookkeeping from R150/month, plus funding assistance. CIBA & SAIT certified." />
     <meta property="twitter:image" content="/twitter-image.jpg" />
@@ -40,7 +40,7 @@
     <meta name="geo.region" content="ZA-NL" />
     <meta name="geo.placename" content="Durban" />
     <meta name="geo.position" content="-29.86;31.02" />
-    <link rel="canonical" href="https://sizakalabsp.com/" />
+    <link rel="canonical" href="https://sizakalaaccountants.co.za/" />
 
     <!-- Structured Data - LocalBusiness Schema -->
     <script type="application/ld+json">
@@ -48,10 +48,10 @@
       "@context": "https://schema.org",
       "@type": "AccountingService",
       "name": "Sizakala Accountants",
-      "legalName": "Sizakala Business Services Provider (Pty) Ltd",
-      "url": "https://sizakalabsp.com",
-      "logo": "https://sizakalabsp.com/logo-company.png",
-      "image": "https://sizakalabsp.com/og-image.jpg",
+      "legalName": "Sizakala Accountants (Pty) Ltd",
+      "url": "https://sizakalaaccountants.co.za",
+      "logo": "https://sizakalaaccountants.co.za/logo-company.png",
+      "image": "https://sizakalaaccountants.co.za/og-image.jpg",
       "description": "Professional accounting services specializing in public school audits, bookkeeping, and funding assistance. CBAP SA registered with CIBA and SAIT certification.",
       "telephone": "+27670343472",
       "email": "sizakalabsp@gmail.com",
