Update contact information across multiple files, changing email references from 'sizakalabsp@gmail.com' to 'info@sizakalaaccountants.co.za' for consistency and improved communication.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       "image": "https://sizakalaaccountants.co.za/og-image.jpg",
       "description": "Professional accounting services specializing in public school audits, bookkeeping, and funding assistance. CBAP SA registered with CIBA and SAIT certification.",
       "telephone": "+27670343472",
-      "email": "sizakalabsp@gmail.com",
+      "email": "info@sizakalaaccountants.co.za ",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "526 Durban Club Place, 303 Anton Lembede Street",
